--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -26,6 +26,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
@@ -44,4 +45,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
+//    implementation 'com.auth0.android:auth0:1.10.0'
+    implementation 'com.auth0.android:jwtdecode:1.1.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.auth0:java-jwt:3.4.0'
+
 }
