--- a/API/feedbacksystem/src/main/resources/application.properties
+++ b/API/feedbacksystem/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/coursedb
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 
 spring.datasource.username=root
+spring.datasource.pass = 1234
+
 server.port=8080
 
 
