--- a/API/feedbacksystem/src/main/resources/application.properties
+++ b/API/feedbacksystem/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/coursedb
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
-
+spring.devtools.restart.enabled = false
 spring.datasource.username=root
 spring.datasource.pass = 1234
 
