--- a/API/feedbacksystem/bin/src/main/resources/application.properties
+++ b/API/feedbacksystem/bin/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/coursedb
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 
 spring.datasource.username=root
-spring.datasource.password=Youaretheappleofmyeyes
-
 server.port=8080
+
+
