--- a/API/feedbacksystem/src/main/resources/application.properties
+++ b/API/feedbacksystem/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.devtools.restart.enabled = false
 spring.datasource.username=root
-spring.datasource.pass = 1234
+#spring.jackson.serialization.wrap-root-value=true
 
 server.port=8080
 
