--- a/API/feedbacksystem/pom.xml
+++ b/API/feedbacksystem/pom.xml
@@ -82,7 +82,12 @@
     		<artifactId>javax.persistence-api</artifactId>
     		<version>2.2</version>
 		</dependency>
-
+		
+		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-annotations</artifactId>
+		</dependency>
+	
     </dependencies>
 
 	<build>
