--- a/API/feedbacksystem/pom.xml
+++ b/API/feedbacksystem/pom.xml
@@ -78,8 +78,12 @@
     		<artifactId>javax.persistence-api</artifactId>
     		<version>2.2</version>
 		</dependency>
-		
 
+           <dependency>
+               <groupId>com.fasterxml.jackson.datatype</groupId>
+               <artifactId>jackson-datatype-joda</artifactId>
+               <version>2.12.3</version>
+           </dependency>
 
 	<dependency>
         <groupId>org.projectlombok</groupId>
