--- a/API/feedbacksystem/src/main/resources/application.properties
+++ b/API/feedbacksystem/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.devtools.restart.enabled = false
 spring.datasource.username=root
+#spring.datasource.password=1234
 spring.jackson.serialization.write-dates-as-timestamps: false
 server.port=8080
 
