--- a/API/feedbacksystem/src/main/resources/application.properties
+++ b/API/feedbacksystem/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.devtools.restart.enabled = false
 spring.datasource.username=root
 spring.jpa.properties.hibernate.validator.apply_to_ddl=false
-#spring.datasource.password=1234
+spring.datasource.password=1234
 spring.jackson.serialization.write-dates-as-timestamps: false
 server.port=8080
 
