--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -56,4 +57,8 @@ dependencies {
     implementation 'com.auth0:java-jwt:3.4.0'
 
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'com.github.lecho:hellocharts-library:1.5.8'
+
 }
