--- a/API/feedbacksystem/src/main/resources/application.properties
+++ b/API/feedbacksystem/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/coursedb
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.devtools.restart.enabled = false
 spring.datasource.username=root
 spring.jpa.properties.hibernate.validator.apply_to_ddl=false
-spring.datasource.password=1234
+#spring.datasource.password=1234
 spring.jackson.serialization.write-dates-as-timestamps: false
 server.port=8080
 
